...
                        Image("icon-\(appSettings.colorName)")
                            .resizable()
                            .scaledToFit()
                            .frame(height: 50)
                            .padding(.top)
                            .foregroundColor(appSettings.colorTheme)
                            .accessibilityLabel("Add")
                    }.padding(.bottom, 30) .sensoryFeedback(.selection, trigger: showAdd)
                }
                ToolbarItem(placement: .principal) {
                    VStack {
                        HStack {
                            Text(lent ? "LENT" : "BORROWED")
...
                    } label: { Image(systemName: "line.3.horizontal").font(.title3).accessibilityLabel("Settings") }
                        .sensoryFeedback(.selection, trigger: showSettings)
                }
                ToolbarItem(placement: .topBarTrailing) {
                    Button {
                        filterPeople.toggle()
                    } label: { Image(systemName: filterPeople ? "person.2" : "shippingbox").font(.subheadline) .accessibilityLabel(filterPeople ? "Currently filtering by people" : "Currently filtering by category") .accessibilityHint(filterPeople ? "Click to filter by category" : "Click to filter by people") } .sensoryFeedback(.selection, trigger: filterPeople)
                }
            }
            .onAppear {
                dataController.loadTags()
                dataController.deleteOldTagsIfNotUsed()
                dataController.updateCashReminders()
...
