...
                    ToolbarItem(placement: .topBarTrailing) {
                        Button {
                            let cash = dataController.FetchAndCreateCash(amount: Int(amount) ?? 0, person: person, tag: creatingNewTag ? tagString :  tag?.name ?? "", lent: lent, title: title, reminderEnabled: reminder, reminderTime: date)
                            updateReminder(cash: cash)
                            dismiss()
                        } label: {
                            Image(systemName: "checkmark").accessibilityLabel("Create")
                        }
                    }
                }
                .alert("Notifications Disabled", isPresented: $showingNotificationsError) {
                    Button("Settings", action: showAppSettings)
                    Button("Cancel", role: .cancel) { }
...
                Text("Lend").padding() .frame(minWidth: 110) .opacity(lent ? 1 : 0.5) .font(.myTitle) .background(Color.backgroundDark) .clipShape(RoundedRectangle(cornerRadius: 10, style: .continuous)) .fixedSize(horizontal: true, vertical: false) .overlay(RoundedRectangle(cornerRadius: 10, style: .continuous) .stroke(appSettings.gradient().opacity(lent ? 1 : 0.6), lineWidth: lent ? 2 : 1)) .acce
            }.sensoryFeedback(.selection, trigger: lent)
            Spacer()
            Button {
                lent = false
            } label: {
                Text("Borrow").padding().frame(minWidth: 110) .opacity(lent ? 0.5 : 1) .font(.myTitle) .background(Color.backgroundDark) .clipShape(RoundedRectangle(cornerRadius: 10, style: .continuous)) .fixedSize(horizontal: true, vertical: false) .overlay(RoundedRectangle(cornerRadius : 10, style: .continuous).stroke(appSettings.gradient().opacity(lent ? 0.6 : 1), lineWidth: lent ? 1 : 2)) .acc
            }.sensoryFeedback(.selection, trigger: lent)
            Spacer()
        } .padding(.horizontal) .padding(.horizontal)
    }
}

...
